stack.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Stack to build things inside - VPC, gateway IP, Subnets",
  "Parameters": {
    "AllowSSHFrom": {
      "Description": "The net block (CIDR) that SSH is available to.",
      "Default": "0.0.0.0/0",
      "Type": "String"
    }
  },
  "Resources": {
    "CoreOSSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SecurityGroup for CoreOS Testing",
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": {"Ref": "AllowSSHFrom"}}
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "KJLSecurityGroup"
          }
        ]
      }
    },
    "Ingress4001": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {"Ref": "CoreOSSecurityGroup"}, "IpProtocol": "tcp", "FromPort": "4001", "ToPort": "4001", "SourceSecurityGroupId": {
          "Fn::GetAtt" : [ "CoreOSSecurityGroup", "GroupId" ]
        }
      }
    },
    "Ingress7001": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {"Ref": "CoreOSSecurityGroup"}, "IpProtocol": "tcp", "FromPort": "7001", "ToPort": "7001", "SourceSecurityGroupId": {
          "Fn::GetAtt" : [ "CoreOSSecurityGroup", "GroupId" ]
        }
      }
    },
    "KJLVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.17.42.0/23",
        "Tags": [
          {
            "Key": "Name",
            "Value": "KJLVPC"
          }
        ]
      }
    },
    "KJLInternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "KJLVPCGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": { "Ref" : "KJLInternetGateway" },
        "VpcId": { "Ref" : "KJLVPC" }
      }
    },
    "AccessIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "DependsOn": "KJLVPC"
    },
    "KJLSubnetA": {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "AvailabilityZone" : "ap-southeast-2a",
        "CidrBlock" : "172.17.42.0/24",
        "VpcId" : { "Ref" : "KJLVPC" }
      }
    },
    "KJLSubnetB": {
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "AvailabilityZone" : "ap-southeast-2b",
        "CidrBlock" : "172.17.43.0/24",
        "VpcId" : { "Ref" : "KJLVPC" }
      }
    }
  },
  "Outputs" : {
    "KJLVPC" : {
      "Value" : { "Ref" : "KJLVPC" }
    },
    "CoreOSSecurityGroup" : {
      "Value" : { "Ref" : "CoreOSSecurityGroup" }
    },
    "AccessIP" : {
      "Value" : { "Ref" : "AccessIP" }
    }
  }
}
